--- a/css/style.css
+++ b/css/style.css
@@ -71,7 +71,7 @@ video {
 .video-controls {
 	display: none;
 	opacity: 0.5;
-	color: lightgray;
+	color: #00aeff !important;
 	transition: opacity 0.5s ease-in-out 0s;
 	justify-content: space-between;
 	font-size: 3vw;
@@ -79,6 +79,9 @@ video {
 	position: absolute;
 	width: 300px;
 	height: 70px;
+}
+.video-controls:hover {
+	opacity: 1;
 }
 
 .play-pause-btn {
